Photo adding and editing functionality has been done

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "CloudName": "dv9pa9eej",
+    "ApiKey": "465973487154481",
+    "ApiSecret": "GExhRlNjDf9Av6xPSNa6h9zbhYc"
+  }
 }
